force-app/main/default/objects/Insurance_Company__c/Insurance_Company__c.object-meta.xml
<CustomObject>
    <description>Stores insurance company details for insured patients.</description>
    <label>Insurance Company</label>
    <nameField>
        <label>Insurance Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Companies</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>