force-app/main/default/objects/Insurance_Company__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Street, city, state, and ZIP of the insurance provider.</description>
    <inlineHelpText>Enter the full mailing address, including street, city, state, ZIP/postal code, and country of the insurance provider.</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>