force-app/main/default/objects/Insurance_Company__c/fields/Email_address__c.field-meta.xml
<CustomField>
    <fullName>Email_address__c</fullName>
    <description>Main email address of the insurance company.</description>
    <label>Email address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>