force-app/main/default/objects/Insurance_Company__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Telephone for the insurance provider.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>