force-app/main/default/objects/Insurance_Company__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Web address of the insurance company.</description>
    <inlineHelpText>Enter the official website URL of the insurance provider.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>